--- a/PetSupplies/src/main/webapp/assets/css/main.css
+++ b/PetSupplies/src/main/webapp/assets/css/main.css
@@ -1,5 +1,312 @@
+/* SASS variable */
+/* SASS Methodes */
+/* reset everything. */
 * {
   padding: 0;
   margin: 0; }
 
-/* reset everything. */
+/* main CSS */
+body {
+  font: Helvetica, sans-serif;
+  color: #1c1c1c; }
+
+#page {
+  align-items: center;
+  background: linear-gradient(to top right, #fc737a 10%, #ff7c9d 65%, #ffc01a 125%);
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: opacity 1s; }
+
+#phrase_box {
+  display: flex;
+  flex-flow: column;
+  height: 150px;
+  overflow: hidden;
+  width: 260px; }
+
+#phrases {
+  animation: slide-phrases-upward 20s; }
+
+#footer {
+  bottom: 30px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  left: 0;
+  position: fixed;
+  right: 0; }
+
+@keyframes slide-phrases-upward {
+  0% {
+    transform: translateY(0px); }
+  5% {
+    transform: translateY(-50px); }
+  10% {
+    transform: translateY(-100px); }
+  15% {
+    transform: translateY(-150px); }
+  20% {
+    transform: translateY(-200px); }
+  25% {
+    transform: translateY(-250px); }
+  30% {
+    transform: translateY(-300px); }
+  35% {
+    transform: translateY(-350px); }
+  40% {
+    transform: translateY(-400px); }
+  45% {
+    transform: translateY(-450px); }
+  50% {
+    transform: translateY(-500px); }
+  55% {
+    transform: translateY(-550px); }
+  60% {
+    transform: translateY(-600px); }
+  65% {
+    transform: translateY(-650px); }
+  70% {
+    transform: translateY(-700px); }
+  75% {
+    transform: translateY(-750px); }
+  80% {
+    transform: translateY(-800px); }
+  85% {
+    transform: translateY(-850px); }
+  90% {
+    transform: translateY(-900px); }
+  95% {
+    transform: translateY(-950px); }
+  100% {
+    transform: translateY(-1000px); } }
+
+#loadingCheckCircleSVG-0 {
+  animation: fill-to-white 5000ms;
+  animation-delay: -1.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-1 {
+  animation: fill-to-white 5000ms;
+  animation-delay: -0.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-2 {
+  animation: fill-to-white 5000ms;
+  animation-delay: 0.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-3 {
+  animation: fill-to-white 5000ms;
+  animation-delay: 1.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-4 {
+  animation: fill-to-white 5000ms;
+  animation-delay: 2.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-5 {
+  animation: fill-to-white 5000ms;
+  animation-delay: 3.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-6 {
+  animation: fill-to-white 5000ms;
+  animation-delay: 4.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-7 {
+  animation: fill-to-white 5000ms;
+  animation-delay: 5.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-8 {
+  animation: fill-to-white 5000ms;
+  animation-delay: 6.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-9 {
+  animation: fill-to-white 5000ms;
+  animation-delay: 7.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-10 {
+  animation: fill-to-white 5000ms;
+  animation-delay: 8.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-11 {
+  animation: fill-to-white 5000ms;
+  animation-delay: 9.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-12 {
+  animation: fill-to-white 5000ms;
+  animation-delay: 10.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-13 {
+  animation: fill-to-white 5000ms;
+  animation-delay: 11.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-14 {
+  animation: fill-to-white 5000ms;
+  animation-delay: 12.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-15 {
+  animation: fill-to-white 5000ms;
+  animation-delay: 13.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-16 {
+  animation: fill-to-white 5000ms;
+  animation-delay: 14.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-17 {
+  animation: fill-to-white 5000ms;
+  animation-delay: 15.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-18 {
+  animation: fill-to-white 5000ms;
+  animation-delay: 16.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-19 {
+  animation: fill-to-white 5000ms;
+  animation-delay: 17.5s;
+  fill: white;
+  opacity: 0; }
+
+#loadingCheckCircleSVG-20 {
+  animation: fill-to-white 5000ms;
+  animation-delay: 18.5s;
+  fill: white;
+  opacity: 0; }
+
+@keyframes fill-to-white {
+  0% {
+    opacity: 0; }
+  10% {
+    opacity: 1; }
+  100% {
+    opacity: 1; } }
+
+#loadingCheckSVG-0 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: -1.5s; }
+
+#loadingCheckSVG-1 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: -0.5s; }
+
+#loadingCheckSVG-2 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: 0.5s; }
+
+#loadingCheckSVG-3 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: 1.5s; }
+
+#loadingCheckSVG-4 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: 2.5s; }
+
+#loadingCheckSVG-5 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: 3.5s; }
+
+#loadingCheckSVG-6 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: 4.5s; }
+
+#loadingCheckSVG-7 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: 5.5s; }
+
+#loadingCheckSVG-8 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: 6.5s; }
+
+#loadingCheckSVG-9 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: 7.5s; }
+
+#loadingCheckSVG-10 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: 8.5s; }
+
+#loadingCheckSVG-11 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: 9.5s; }
+
+#loadingCheckSVG-12 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: 10.5s; }
+
+#loadingCheckSVG-13 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: 11.5s; }
+
+#loadingCheckSVG-14 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: 12.5s; }
+
+#loadingCheckSVG-15 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: 13.5s; }
+
+#loadingCheckSVG-16 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: 14.5s; }
+
+#loadingCheckSVG-17 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: 15.5s; }
+
+#loadingCheckSVG-18 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: 16.5s; }
+
+#loadingCheckSVG-19 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: 17.5s; }
+
+#loadingCheckSVG-20 {
+  animation: fill-to-coral 5000ms;
+  animation-delay: 18.5s; }
+
+@keyframes fill-to-coral {
+  0% {
+    fill: white; }
+  10% {
+    fill: #FF6D92; }
+  100% {
+    fill: #FF6D92; } }
