--- a/PetSupplies/src/main/webapp/assets/css/main.css
+++ b/PetSupplies/src/main/webapp/assets/css/main.css
@@ -10,9 +10,12 @@ body {
   font: Helvetica, sans-serif;
   color: #1c1c1c; }
 
+.sLogo {
+  height: 40px; }
+
 #page {
   align-items: center;
-  background: linear-gradient(to top right, #fc737a 10%, #ff7c9d 65%, #ffc01a 125%);
+  background: linear-gradient(to top right, #fc737a 0%, #ff7c9d 0%, #ff5330 0%);
   bottom: 0;
   display: flex;
   justify-content: center;
@@ -25,7 +28,7 @@ body {
 #phrase_box {
   display: flex;
   flex-flow: column;
-  height: 150px;
+  height: 190px;
   overflow: hidden;
   width: 260px; }
 
