--- a/PetSupplies/src/main/webapp/assets/css/main.css
+++ b/PetSupplies/src/main/webapp/assets/css/main.css
@@ -1,3 +1,5 @@
+/* Imports */
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
 /* SASS variable */
 /* SASS Methodes */
 /* reset everything. */
@@ -6,310 +8,180 @@
   margin: 0; }
 
 /* main CSS */
-body {
-  font: Helvetica, sans-serif;
-  color: #1c1c1c; }
+html, body {
+  height: 100%;
+  font-family: "Montserrat", sans-serif;
+  color: #c1c1c1;
+  font-size: 12px; }
 
-.sLogo {
-  height: 40px; }
+h1 {
+  text-transform: uppercase; }
 
-#page {
-  align-items: center;
-  background: linear-gradient(to top right, #fc737a 0%, #ff7c9d 0%, #ff5330 0%);
-  bottom: 0;
-  display: flex;
-  justify-content: center;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  transition: opacity 1s; }
+h3 {
+  font-size: 16px;
+  margin-bottom: 10px;
+  color: #FFF; }
 
-#phrase_box {
-  display: flex;
-  flex-flow: column;
-  height: 190px;
+h1, h2 {
+  margin-bottom: 5px;
+  text-align: center;
+  color: #444444; }
+
+.container {
+  max-width: 1135px;
+  margin-right: auto;
+  margin-left: auto; }
+  .container .grid {
+    margin-bottom: 20px; }
+    .container .grid .grid-1 {
+      width: 100%; }
+    .container .grid .grid-2 {
+      width: 45%;
+      margin-right: 2%; }
+    .container .grid .grid-3 {
+      width: 30%;
+      margin-right: 3%; }
+    .container .grid .grid-4 {
+      width: 23%;
+      margin-right: 1%; }
+    .container .grid .grid-2, .container .grid .grid-3, .container .grid .grid-4 {
+      float: left; }
+
+#header {
+  padding-top: 36px;
+  height: 86px;
+  border-bottom: 3px solid #cecece; }
+  #header .logo {
+    margin-top: 10px;
+    padding-left: 10px;
+    float: left;
+    height: 100%; }
+  #header .menu {
+    margin: 0;
+    padding-top: 40px;
+    float: right;
+    font-size: 18px; }
+    #header .menu li {
+      margin: 0 50px 0 0;
+      padding: 10px;
+      float: left;
+      list-style: none;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      -ms-border-radius: 10px;
+      border-radius: 10px; }
+      #header .menu li a {
+        font-weight: bold;
+        color: #575757;
+        text-decoration: none; }
+      #header .menu li a:active, #header .menu li a:hover {
+        color: #bf0000; }
+    #header .menu li.active {
+      background-color: #bf0000; }
+      #header .menu li.active a {
+        color: #FFF; }
+  #header .cartInfo {
+    float: right; }
+  #header .cartIcon {
+    display: block;
+    position: relative;
+    margin-right: 10px;
+    width: 48px;
+    height: 48px;
+    background-image: url("../images/cart/shopping_bag-48.png"); }
+    #header .cartIcon .amountItems {
+      position: absolute;
+      top: -5px;
+      right: -5px;
+      width: 15px;
+      height: 15px;
+      padding: 5px;
+      display: block;
+      font-size: 13px;
+      text-align: center;
+      color: #FFF;
+      background: #d50808;
+      -webkit-border-radius: 30px;
+      -moz-border-radius: 30px;
+      -ms-border-radius: 30px;
+      border-radius: 30px; }
+
+.content {
+  margin-top: 40px; }
+
+.slogan {
+  margin-bottom: 40px;
+  text-align: center;
+  font-size: 16px;
+  color: #444444; }
+
+.prod {
+  display: block;
+  position: relative;
+  min-width: 260px;
+  height: 264px;
+  border: 3px solid #e1d3d3;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  border-radius: 5px; }
+  .prod .title {
+    position: absolute;
+    bottom: 0;
+    padding: 20px 0;
+    height: 15px;
+    width: 100%;
+    color: #FFF;
+    text-align: center;
+    background-color: #000;
+    opacity: 0.8;
+    filter: alpha(opacity=80);
+    /* For IE8 and earlier */ }
+
+.slider {
+  width: 100%;
+  height: 182px;
   overflow: hidden;
-  width: 180px; }
+  background-image: url("../images/header/dog-header.png");
+  background-position: center; }
+  .slider .text {
+    display: block;
+    margin: 70px 0 0 20px;
+    font-size: 34px;
+    color: #FFF; }
 
-#phrases {
-  animation: slide-phrases-upward 20s; }
+.text-left {
+  text-align: left; }
 
-#footer {
-  bottom: 30px;
-  color: white;
-  display: flex;
-  justify-content: center;
-  left: 0;
-  position: fixed;
-  right: 0; }
+.text-right {
+  text-align: right; }
 
-@keyframes slide-phrases-upward {
-  0% {
-    transform: translateY(0px); }
-  5% {
-    transform: translateY(-50px); }
-  10% {
-    transform: translateY(-100px); }
-  15% {
-    transform: translateY(-150px); }
-  20% {
-    transform: translateY(-200px); }
-  25% {
-    transform: translateY(-250px); }
-  30% {
-    transform: translateY(-300px); }
-  35% {
-    transform: translateY(-350px); }
-  40% {
-    transform: translateY(-400px); }
-  45% {
-    transform: translateY(-450px); }
-  50% {
-    transform: translateY(-500px); }
-  55% {
-    transform: translateY(-550px); }
-  60% {
-    transform: translateY(-600px); }
-  65% {
-    transform: translateY(-650px); }
-  70% {
-    transform: translateY(-700px); }
-  75% {
-    transform: translateY(-750px); }
-  80% {
-    transform: translateY(-800px); }
-  85% {
-    transform: translateY(-850px); }
-  90% {
-    transform: translateY(-900px); }
-  95% {
-    transform: translateY(-950px); }
-  100% {
-    transform: translateY(-1000px); } }
+.page-wrap {
+  min-height: 100%;
+  margin-bottom: -165px; }
 
-#loadingCheckCircleSVG-0 {
-  animation: fill-to-white 5000ms;
-  animation-delay: -1.5s;
-  fill: white;
-  opacity: 0; }
+.page-wrap:after {
+  content: "";
+  display: block; }
 
-#loadingCheckCircleSVG-1 {
-  animation: fill-to-white 5000ms;
-  animation-delay: -0.5s;
-  fill: white;
-  opacity: 0; }
+/* footer */
+.site-footer, .page-wrap:after {
+  height: 165px; }
 
-#loadingCheckCircleSVG-2 {
-  animation: fill-to-white 5000ms;
-  animation-delay: 0.5s;
-  fill: white;
-  opacity: 0; }
+.site-footer {
+  background: #232323; }
+  .site-footer #footer {
+    padding: 40px 0; }
+    .site-footer #footer a {
+      color: #FFF; }
 
-#loadingCheckCircleSVG-3 {
-  animation: fill-to-white 5000ms;
-  animation-delay: 1.5s;
-  fill: white;
-  opacity: 0; }
+/* Layout fixes */
+.clear {
+  clear: both; }
 
-#loadingCheckCircleSVG-4 {
-  animation: fill-to-white 5000ms;
-  animation-delay: 2.5s;
-  fill: white;
-  opacity: 0; }
-
-#loadingCheckCircleSVG-5 {
-  animation: fill-to-white 5000ms;
-  animation-delay: 3.5s;
-  fill: white;
-  opacity: 0; }
-
-#loadingCheckCircleSVG-6 {
-  animation: fill-to-white 5000ms;
-  animation-delay: 4.5s;
-  fill: white;
-  opacity: 0; }
-
-#loadingCheckCircleSVG-7 {
-  animation: fill-to-white 5000ms;
-  animation-delay: 5.5s;
-  fill: white;
-  opacity: 0; }
-
-#loadingCheckCircleSVG-8 {
-  animation: fill-to-white 5000ms;
-  animation-delay: 6.5s;
-  fill: white;
-  opacity: 0; }
-
-#loadingCheckCircleSVG-9 {
-  animation: fill-to-white 5000ms;
-  animation-delay: 7.5s;
-  fill: white;
-  opacity: 0; }
-
-#loadingCheckCircleSVG-10 {
-  animation: fill-to-white 5000ms;
-  animation-delay: 8.5s;
-  fill: white;
-  opacity: 0; }
-
-#loadingCheckCircleSVG-11 {
-  animation: fill-to-white 5000ms;
-  animation-delay: 9.5s;
-  fill: white;
-  opacity: 0; }
-
-#loadingCheckCircleSVG-12 {
-  animation: fill-to-white 5000ms;
-  animation-delay: 10.5s;
-  fill: white;
-  opacity: 0; }
-
-#loadingCheckCircleSVG-13 {
-  animation: fill-to-white 5000ms;
-  animation-delay: 11.5s;
-  fill: white;
-  opacity: 0; }
-
-#loadingCheckCircleSVG-14 {
-  animation: fill-to-white 5000ms;
-  animation-delay: 12.5s;
-  fill: white;
-  opacity: 0; }
-
-#loadingCheckCircleSVG-15 {
-  animation: fill-to-white 5000ms;
-  animation-delay: 13.5s;
-  fill: white;
-  opacity: 0; }
-
-#loadingCheckCircleSVG-16 {
-  animation: fill-to-white 5000ms;
-  animation-delay: 14.5s;
-  fill: white;
-  opacity: 0; }
-
-#loadingCheckCircleSVG-17 {
-  animation: fill-to-white 5000ms;
-  animation-delay: 15.5s;
-  fill: white;
-  opacity: 0; }
-
-#loadingCheckCircleSVG-18 {
-  animation: fill-to-white 5000ms;
-  animation-delay: 16.5s;
-  fill: white;
-  opacity: 0; }
-
-#loadingCheckCircleSVG-19 {
-  animation: fill-to-white 5000ms;
-  animation-delay: 17.5s;
-  fill: white;
-  opacity: 0; }
-
-#loadingCheckCircleSVG-20 {
-  animation: fill-to-white 5000ms;
-  animation-delay: 18.5s;
-  fill: white;
-  opacity: 0; }
-
-@keyframes fill-to-white {
-  0% {
-    opacity: 0; }
-  10% {
-    opacity: 1; }
-  100% {
-    opacity: 1; } }
-
-#loadingCheckSVG-0 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: -1.5s; }
-
-#loadingCheckSVG-1 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: -0.5s; }
-
-#loadingCheckSVG-2 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: 0.5s; }
-
-#loadingCheckSVG-3 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: 1.5s; }
-
-#loadingCheckSVG-4 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: 2.5s; }
-
-#loadingCheckSVG-5 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: 3.5s; }
-
-#loadingCheckSVG-6 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: 4.5s; }
-
-#loadingCheckSVG-7 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: 5.5s; }
-
-#loadingCheckSVG-8 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: 6.5s; }
-
-#loadingCheckSVG-9 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: 7.5s; }
-
-#loadingCheckSVG-10 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: 8.5s; }
-
-#loadingCheckSVG-11 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: 9.5s; }
-
-#loadingCheckSVG-12 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: 10.5s; }
-
-#loadingCheckSVG-13 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: 11.5s; }
-
-#loadingCheckSVG-14 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: 12.5s; }
-
-#loadingCheckSVG-15 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: 13.5s; }
-
-#loadingCheckSVG-16 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: 14.5s; }
-
-#loadingCheckSVG-17 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: 15.5s; }
-
-#loadingCheckSVG-18 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: 16.5s; }
-
-#loadingCheckSVG-19 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: 17.5s; }
-
-#loadingCheckSVG-20 {
-  animation: fill-to-coral 5000ms;
-  animation-delay: 18.5s; }
-
-@keyframes fill-to-coral {
-  0% {
-    fill: white; }
-  10% {
-    fill: #FF6D92; }
-  100% {
-    fill: #FF6D92; } }
+.clearFix:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden; }
