--- a/PetSupplies/src/main/webapp/assets/sass/main.scss
+++ b/PetSupplies/src/main/webapp/assets/sass/main.scss
@@ -1,102 +1,82 @@
+/* Imports */
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
 /* SASS variable */
-$default-font: Helvetica, sans-serif;
-$primary-font-color: #1c1c1c;
-$gold: #ff4019;
-$coral: #FC636B;
-$brightCoral: #FF6D92;
+$default-font: 'Montserrat', sans-serif;
+$primary-font-color: #c1c1c1;
 
 /* SASS Methodes */
 @mixin border-radius($radius) { -webkit-border-radius: $radius; -moz-border-radius:$radius; -ms-border-radius:$radius; border-radius:$radius; }
+@mixin opacity($opacity) { opacity: $opacity/100;  filter: alpha(opacity=$opacity); /* For IE8 and earlier */ }
 
 /* reset everything. */
 * { padding:0; margin:0; }
 
 /* main CSS */
-body { font:$default-font; color:$primary-font-color; }
-.sLogo { height:40px; }
+html, body { height:100%; font-family:$default-font; color:$primary-font-color; font-size:12px; }
+h1 { text-transform:uppercase; }
+h2 { }
+h3 { font-size:16px; margin-bottom:10px; color:#FFF; }
+h1, h2 { margin-bottom:5px; text-align:center; color:#444444; }
 
-#page {
-  $opacity: 90%;
-  align-items: center;
-  background: linear-gradient(
-                  to top right,
-                  mix($coral, white, $opacity) 0%,
-                  mix($brightCoral, white, $opacity) 0%,
-                  mix($gold, white, $opacity) 0%);
-  bottom: 0;
-  display: flex;
-  justify-content: center;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  transition: opacity 1s;
+.container { max-width: 1135px; margin-right: auto; margin-left: auto;
+  .grid { margin-bottom:20px;
+    .grid-1 { width:100%; }
+    .grid-2 { width: 45%; margin-right: 2%; }
+    .grid-3 { width:30%; margin-right:3%;  }
+    .grid-4 { width:23%; margin-right:1%; }
+    .grid-2, .grid-3, .grid-4 { float:left; }
+  }
 }
 
-
-#phrase_box {
-  display: flex;
-  flex-flow: column;
-  height: 190px;
-  overflow: hidden;
-  width: 180px;
-}
-
-#phrases {
-  animation: slide-phrases-upward 20s;
-}
-
-#footer {
-  bottom: 30px;
-  color: white;
-  display: flex;
-  justify-content: center;
-  left: 0;
-  position: fixed;
-  right: 0;
-}
-
-@keyframes slide-phrases-upward {
-  @for $i from 0 through 20 {
-    #{$i * 5%} {
-      transform: translateY($i * -50px);
+#header { padding-top:36px; height:86px; border-bottom:3px solid #cecece;
+  .logo { margin-top:10px; padding-left:10px; float:left; height:100%; }
+  .menu { margin:0; padding-top:40px; float:right; font-size:18px;
+    li { margin:0 50px 0 0; padding:10px; float:left; list-style:none; @include border-radius(10px);
+      a { font-weight:bold; color:#575757; text-decoration: none; }
+      a:active, a:hover { color:#bf0000; }
+    }
+    li.active { background-color: #bf0000;
+      a { color:#FFF; }
     }
   }
+  .cartInfo { float:right; }
+  .cartIcon { display:block; position:relative; margin-right:10px; width:48px; height:48px; background-image:url('../images/cart/shopping_bag-48.png');
+    .amountItems { position:absolute; top:-5px; right:-5px; width:15px; height:15px; padding:5px; display:block; font-size:13px; text-align:center; color:#FFF; background:#d50808; @include border-radius(30px); }
+  }
 }
 
-@for $i from 0 through 20 {
-  #loadingCheckCircleSVG-#{$i} {
-    animation: fill-to-white 5000ms;
-    animation-delay: ($i - 1.5) * 1s;
-    fill: white;
-    opacity: 0;
+.content { margin-top:40px; }
+.slogan { margin-bottom:40px; text-align:center; font-size:16px; color:#444444; }
+
+.prod { display:block; position:relative; min-width:260px; height:264px; border:3px solid #e1d3d3; @include border-radius(5px);
+  .title { position:absolute; bottom:0; padding:20px 0; height:15px; width:100%; color:#FFF; text-align:center; background-color:#000;  @include opacity(80); }
+}
+
+.slider { width:100%; height:182px; overflow:hidden; background-image:url('../images/header/dog-header.png'); background-position: center;
+  .text { display:block; margin:70px 0 0 20px; font-size:34px; color:#FFF; }
+}
+
+.text-left { text-align:left; }
+.text-right { text-align:right; }
+
+.page-wrap { min-height:100%; margin-bottom:-165px; }
+.page-wrap:after { content:""; display:block; }
+
+/* footer */
+.site-footer, .page-wrap:after { height:165px; }
+.site-footer { background:#232323;
+  #footer { padding:40px 0;
+    a { color: #FFF; }
   }
 }
-@keyframes fill-to-white {
-  0% {
-    opacity: 0;
-  }
-  10% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@for $i from 0 through 20 {
-  #loadingCheckSVG-#{$i} {
-    animation: fill-to-coral 5000ms;
-    animation-delay: ($i - 1.5) * 1s;
-  }
-}
-@keyframes fill-to-coral {
-  0% {
-    fill: white;
-  }
-  10% {
-    fill: $brightCoral;
-  }
-  100% {
-    fill: $brightCoral;
-  }
+
+/* Layout fixes */
+.clear { clear:both; }
+.clearFix:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
 }
