--- a/PetSupplies/src/main/webapp/assets/css/main.css
+++ b/PetSupplies/src/main/webapp/assets/css/main.css
@@ -30,13 +30,14 @@ h1, h2 {
 .container {
   max-width: 1135px;
   margin-right: auto;
-  margin-left: auto; }
+  margin-left: auto;
+  padding: 0 10px; }
   .container .grid {
     margin-bottom: 20px; }
     .container .grid .grid-1 {
       width: 100%; }
     .container .grid .grid-2 {
-      width: 45%;
+      width: 48%;
       margin-right: 2%; }
     .container .grid .grid-3 {
       width: 30%;
@@ -106,6 +107,19 @@ h1, h2 {
       -ms-border-radius: 30px;
       border-radius: 30px; }
 
+.slider {
+  width: 100%;
+  height: 182px;
+  overflow: hidden;
+  background-image: url("../images/header/dog-header.png");
+  background-position: center; }
+  .slider .text {
+    display: block;
+    margin: 70px 0 0 20px;
+    font-size: 34px;
+    color: #FFF; }
+
+/* content */
 .content {
   margin-top: 40px; }
 
@@ -115,10 +129,16 @@ h1, h2 {
   font-size: 16px;
   color: #444444; }
 
+/* homepage products */
+.productContainer {
+  margin-bottom: 20px; }
+
 .prod {
   display: block;
   position: relative;
-  min-width: 260px;
+  float: left;
+  margin: 0 5px 5px 0;
+  width: 270px;
   height: 264px;
   border: 3px solid #e1d3d3;
   -webkit-border-radius: 5px;
@@ -138,24 +158,14 @@ h1, h2 {
     filter: alpha(opacity=80);
     /* For IE8 and earlier */ }
 
-.slider {
-  width: 100%;
-  height: 182px;
-  overflow: hidden;
-  background-image: url("../images/header/dog-header.png");
-  background-position: center; }
-  .slider .text {
-    display: block;
-    margin: 70px 0 0 20px;
-    font-size: 34px;
-    color: #FFF; }
-
+/* other classes */
 .text-left {
   text-align: left; }
 
 .text-right {
   text-align: right; }
 
+/* Sticky footer page wrap */
 .page-wrap {
   min-height: 100%;
   margin-bottom: -165px; }
@@ -185,3 +195,11 @@ h1, h2 {
   height: 0;
   clear: both;
   visibility: hidden; }
+
+@media screen and (max-width: 1145px) {
+  .prod {
+    width: 47%; } }
+
+@media screen and (max-width: 500px) {
+  .prod {
+    width: 97%; } }
