--- a/PetSupplies/src/main/webapp/assets/sass/main.scss
+++ b/PetSupplies/src/main/webapp/assets/sass/main.scss
@@ -19,10 +19,10 @@ h2 { }
 h3 { font-size:16px; margin-bottom:10px; color:#FFF; }
 h1, h2 { margin-bottom:5px; text-align:center; color:#444444; }
 
-.container { max-width: 1135px; margin-right: auto; margin-left: auto;
+.container { max-width: 1135px; margin-right: auto; margin-left: auto; padding:0 10px;
   .grid { margin-bottom:20px;
     .grid-1 { width:100%; }
-    .grid-2 { width: 45%; margin-right: 2%; }
+    .grid-2 { width: 48%; margin-right: 2%; }
     .grid-3 { width:30%; margin-right:3%;  }
     .grid-4 { width:23%; margin-right:1%; }
     .grid-2, .grid-3, .grid-4 { float:left; }
@@ -45,21 +45,25 @@ h1, h2 { margin-bottom:5px; text-align:center; color:#444444; }
     .amountItems { position:absolute; top:-5px; right:-5px; width:15px; height:15px; padding:5px; display:block; font-size:13px; text-align:center; color:#FFF; background:#d50808; @include border-radius(30px); }
   }
 }
-
-.content { margin-top:40px; }
-.slogan { margin-bottom:40px; text-align:center; font-size:16px; color:#444444; }
-
-.prod { display:block; position:relative; min-width:260px; height:264px; border:3px solid #e1d3d3; @include border-radius(5px);
-  .title { position:absolute; bottom:0; padding:20px 0; height:15px; width:100%; color:#FFF; text-align:center; background-color:#000;  @include opacity(80); }
-}
-
 .slider { width:100%; height:182px; overflow:hidden; background-image:url('../images/header/dog-header.png'); background-position: center;
   .text { display:block; margin:70px 0 0 20px; font-size:34px; color:#FFF; }
 }
 
+/* content */
+.content { margin-top:40px; }
+.slogan { margin-bottom:40px; text-align:center; font-size:16px; color:#444444; }
+
+/* homepage products */
+.productContainer { margin-bottom:20px; }
+.prod { display:block; position:relative; float:left; margin:0 5px 5px 0; width:270px; height:264px; border:3px solid #e1d3d3; @include border-radius(5px);
+  .title { position:absolute; bottom:0; padding:20px 0; height:15px; width:100%; color:#FFF; text-align:center; background-color:#000;  @include opacity(80); }
+}
+
+/* other classes */
 .text-left { text-align:left; }
 .text-right { text-align:right; }
 
+/* Sticky footer page wrap */
 .page-wrap { min-height:100%; margin-bottom:-165px; }
 .page-wrap:after { content:""; display:block; }
 
@@ -79,4 +83,12 @@ h1, h2 { margin-bottom:5px; text-align:center; color:#444444; }
   height: 0;
   clear: both;
   visibility: hidden;
+}
+
+@media screen and (max-width: 1145px) {
+  .prod { width:47%; }
+}
+
+@media screen and (max-width: 500px) {
+  .prod { width:97%; }
 }
