Added some awesome directive possibilitys for presentation

--- a/PetSupplies/src/main/webapp/templates/header.html
+++ b/PetSupplies/src/main/webapp/templates/header.html
@@ -9,5 +9,5 @@
         </ul>
     </div>
 </div>
-<div header-slider-directive></div>
+<div header-slider-directive slider-title="Verras uw huisdier"></div>
 <div header-garantees-directive></div>
